# nlp_hacks_mirostat

./: GenerateText.ipynb  README.md  decoding.py  pyproject.toml
language_models/: __init__.py  language_model.py  transformers_lm.py
tests/token_samplers/: test_greedy.py  test_mirostat.py  test_top_k.py  test_top_p.py
token_samplers/: __init__.py  greedy.py  mirostat.py  token_sampler.py  top_k.py  top_p.py
