[tool.black]
line-length = 119

[tool.poetry]
name = "mirostat"
version = "0.1.0"
description = ""
authors = ["Ryokan Ri <ryou0634@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.16.2"
jupyter = "^1.0.0"
sentencepiece = "^0.1.96"
click = "^8.0.4"
torch = "^1.10.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
